Ready for testing

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -214,9 +214,9 @@
 
     <script>
       // 🟢 UPDATE THIS URL TO YOUR RENDER URL
-      const API_URL = "https://slido-9mg1.onrender.com/api";
+      const API_URL = "https://gdg-quiz-app.onrender.com/api";
       const PASSCODE = sessionStorage.getItem("ADMIN_PASSCODE");
-      const socket = io("https://slido-9mg1.onrender.com");
+      const socket = io("https://gdg-quiz-app.onrender.com");
 
       let currentSessionCode = null;
       let editingQuestionId = null;
