--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -121,8 +121,8 @@
       /* =====================
    1. CONFIGURATION
 ===================== */
-      const API_URL = "https://slido-9mg1.onrender.com/api";
-      const SOCKET_URL = "https://slido-9mg1.onrender.com";
+      const API_URL = "https://gdg-quiz-app.onrender.com/api";
+      const SOCKET_URL = "https://gdg-quiz-app.onrender.com";
 
       // Get Session from Storage (Admin sets this before opening window)
       const SESSION_CODE = sessionStorage.getItem("SESSION_CODE");
