--- a/frontend/play.html
+++ b/frontend/play.html
@@ -236,7 +236,7 @@
       // ==========================================
 
       // ✅ Using your Live Render Link
-      const API_URL = "https://slido-9mg1.onrender.com";
+      const API_URL = "https://gdg-quiz-app.onrender.com";
 
       const socket = io(API_URL, {
         transports: ["websocket"],
