--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -5,136 +5,256 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Login</title>
     <style>
+      :root {
+        --blue: #1a73e8;
+        --red: #ea4335;
+        --gray-900: #111827;
+        --gray-600: #4b5563;
+        --gray-300: #d1d5db;
+        --bg: #f9fafb;
+      }
+
+      * {
+        box-sizing: border-box;
+        font-family: "Segoe UI", system-ui, sans-serif;
+      }
+
       body {
-        font-family: "Segoe UI", sans-serif;
-        background-color: #f3f4f6;
+        margin: 0;
+        height: 100vh;
+        background: var(--bg);
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        margin: 0;
+        background-image:
+          linear-gradient(
+            to right,
+            rgba(8, 75, 162, 0.12) 1px,
+            transparent 1px
+          ),
+          linear-gradient(
+            to bottom,
+            rgba(8, 75, 162, 0.12) 1px,
+            transparent 1px
+          );
+        background-size: 40px 40px;
       }
 
-      .card {
-        background: white;
-        padding: 30px;
-        border-radius: 12px;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        width: 350px;
+      /* Card */
+      .login-card {
+        width: 470px;
+        background: #fff;
+        border-radius: 18px;
+        padding: 32px;
+        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
+        animation: fadeUp 0.6s ease forwards;
         text-align: center;
       }
 
-      h1 {
-        margin-top: 0;
-        color: #1f2937;
-        font-size: 24px;
+      /* Header */
+      .login-header {
+        margin-bottom: 28px;
       }
+
+      .login-header h1 {
+        margin: 0;
+        font-size: 26px;
+        color: var(--gray-900);
+        font-weight: 600;
+      }
+
+      .login-header p {
+        margin-top: 6px;
+        font-size: 14px;
+        color: var(--gray-600);
+      }
+
+      /* Label & Input */
       label {
         display: block;
-        margin-top: 20px;
-        font-weight: bold;
-        color: #4b5563;
+        margin-top: 18px;
+        font-size: 14px;
+        font-weight: 600;
+        color: var(--gray-600);
         text-align: left;
       }
 
       input {
         width: 100%;
-        padding: 12px;
-        margin-top: 5px;
-        border: 1px solid #d1d5db;
-        border-radius: 6px;
-        box-sizing: border-box;
-        font-size: 16px;
+        margin-top: 8px;
+        padding: 12px 14px;
+        font-size: 15px;
+        border-radius: 10px;
+        border: 1px solid var(--gray-300);
+        outline: none;
+        transition:
+          border 0.2s,
+          box-shadow 0.2s;
       }
 
+      input:focus {
+        border-color: var(--blue);
+        box-shadow: 0 0 0 3px rgba(26, 115, 232, 0.15);
+      }
+
+      /* Button */
       button {
         width: 100%;
-        padding: 12px;
-        margin-top: 25px;
+        margin-top: 28px;
+        padding: 14px;
+        border-radius: 12px;
         border: none;
-        border-radius: 6px;
-        font-weight: bold;
-        cursor: pointer;
-        font-size: 16px;
-        background-color: #1f2937; /* Dark Grey */
+        background: var(--blue);
         color: white;
-        transition: 0.2s;
+        font-size: 15px;
+        font-weight: 600;
+        cursor: pointer;
+        transition:
+          transform 0.15s ease,
+          box-shadow 0.15s ease;
       }
 
       button:hover {
-        opacity: 0.9;
+        transform: translateY(-1px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+        background: #1557b0;
       }
 
-      .error {
-        color: #dc2626;
-        margin-top: 15px;
-        font-size: 14px;
+      button:disabled {
+        background: var(--gray-300);
+        cursor: not-allowed;
+        transform: none;
+        box-shadow: none;
       }
+
+      /* Error / Status */
+      .status {
+        margin-top: 14px;
+        font-size: 14px;
+        min-height: 20px;
+      }
+      .error {
+        color: var(--red);
+      }
+      .loading {
+        color: var(--gray-600);
+      }
+
+      /* Back link */
       .back-link {
         display: block;
-        margin-top: 15px;
-        color: #666;
-        text-decoration: none;
+        margin-top: 20px;
         font-size: 14px;
+        color: var(--gray-600);
+        text-decoration: none;
       }
       .back-link:hover {
         text-decoration: underline;
       }
+
+      @keyframes fadeUp {
+        from {
+          opacity: 0;
+          transform: translateY(12px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
     </style>
   </head>
+
   <body>
-    <div class="card">
-      <h1>Admin Verification</h1>
+    <div class="login-card">
+      <div class="login-header">
+        <h1>Admin Verification</h1>
+        <p>Secure access to the admin dashboard</p>
+      </div>
 
-      <label>Enter Passcode</label>
-      <input type="password" id="passcode" placeholder="Admin Passcode..." />
+      <label for="passcode">Admin Passcode</label>
+      <input
+        type="password"
+        id="passcode"
+        placeholder="Enter passcode..."
+        autocomplete="off" />
 
-      <button onclick="verifyPasscode()">Verify & Login</button>
+      <button id="verifyBtn" onclick="verifyPasscode()">Verify & Login</button>
 
-      <p id="errorMsg" class="error"></p>
+      <div id="errorMsg" class="status"></div>
+
       <a href="index.html" class="back-link">← Back to Home</a>
     </div>
 
     <script>
-      async function verifyPasscode() {
-        const passcode = document.getElementById("passcode").value;
-        const errorEl = document.getElementById("errorMsg");
+      // 🟢 CONFIGURATION
+      const API_URL = "https://slido-9mg1.onrender.com/api";
 
+      async function verifyPasscode() {
+        const passcode = document.getElementById("passcode").value.trim();
+        const errorEl = document.getElementById("errorMsg");
+        const btn = document.getElementById("verifyBtn");
+
+        // 1. Basic Check
         if (!passcode) {
           errorEl.innerText = "Please enter the passcode";
+          errorEl.className = "status error";
           return;
         }
 
-        errorEl.innerText = "Verifying...";
+        // 2. UI Loading State (Robust Feedback)
+        errorEl.innerText = "Connecting... (Server wakes up in ~50s)";
+        errorEl.className = "status loading";
+        btn.disabled = true;
+        btn.innerText = "Verifying...";
 
         try {
-          // 1. Send Request to Backend
-          const response = await fetch(
-            "https://gdg-quiz-app.onrender.com/api/admin/login",
-            {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-                "admin-passcode": passcode,
-              },
+          // 3. Setup Long Timeout (70 Seconds)
+          // This prevents "Network Error" during Cold Starts
+          const controller = new AbortController();
+          const timeoutId = setTimeout(() => controller.abort(), 70000);
+
+          // 4. Send Request
+          const response = await fetch(`${API_URL}/admin/verify-passcode`, {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+              "admin-passcode": passcode,
             },
-          );
+            signal: controller.signal, // Attach timeout logic
+          });
+
+          clearTimeout(timeoutId); // Request succeeded, clear timeout
 
           if (response.ok) {
-            // 2. SUCCESS: Save passcode and Navigate
-            // We save it in sessionStorage so the next page can use it to add questions
+            // 5. SUCCESS: Save & Redirect
             sessionStorage.setItem("ADMIN_PASSCODE", passcode);
-
-            // Redirect to the dashboard page
             window.location.href = "dashboard.html";
           } else {
-            // 3. FAILURE: Show error
+            // 6. FAILURE: Wrong Password
             const data = await response.json();
             errorEl.innerText = data.message || "Invalid Passcode";
+            errorEl.className = "status error";
+            resetButton();
           }
         } catch (err) {
-          console.error(err);
-          errorEl.innerText = "Server Error. Is backend running?";
+          // 7. NETWORK / TIMEOUT ERROR
+          console.error("Login Error:", err);
+
+          if (err.name === "AbortError") {
+            errorEl.innerText = "Timeout. Server took too long. Try again.";
+          } else {
+            // This is the most common error for Cold Starts
+            errorEl.innerText = "Server is waking up! Click Login again.";
+          }
+
+          errorEl.className = "status error";
+          resetButton();
+        }
+
+        function resetButton() {
+          btn.disabled = false;
+          btn.innerText = "Verify & Login";
         }
       }
     </script>
